Fix: z-index 수정

--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -23,7 +23,7 @@ $border-radius--video: 16px;
 
 // z-index
 $z-index--header: 10;
-$z-index--loading: 20;
-$z-index--cursor: 30;
-$z-index--overlay: 40;
-$z-index--skip-nav: 50;
+$z-index--skip-nav: 20;
+$z-index--loading: 30;
+$z-index--cursor: 40;
+$z-index--overlay: 50;
